--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <title>Chat-app</title>
 </head>
 <body>
+
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
     
 </body>
 </html>
