--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <title>Chat-app</title>
 </head>
 <body>
-
+    Chat App
+    
+    <button id="increment">+1</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
     
